@@ -1,3 +1,11 @@
+2006-05-12 Jim Garlick <garlick@speakeasy.net>
+
+  * src/hp3488.[ch]: New.
+
+  * src/Makefile: hp3488 support
+
+  * examples/gpib.conf: includes hp3488 entry. 
+
 2006-02-28 Jim Garlick <garlick@speakeasy.net>
 
   * src/hp1630.c: drop \r\n in model comparison
